# YOLO_bounding_box

./: README.md
yolo_bounding_box/: CMakeLists.txt  box.cpp  box.h  test.cpp
yolo_bounding_box/data/: yolov4-tiny-obj.cfg
